--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-    /* transition: .2s; */
+    transition: .2s;
     -webkit-tap-highlight-color: transparent;
 }
 
