--- a/style.css
+++ b/style.css
@@ -651,7 +651,9 @@ h2 {
     align-items: center;
 }
 .serviceTexts .text1,.text2,.text3{
-    font-size: 10px;
+    font-size: 11px;
+    letter-spacing: .5px;
+    word-spacing: 2px;
     /* width: 150px; */
     text-align: center;
     position: relative;
@@ -660,17 +662,17 @@ h2 {
 .text1{
     top: -45px;
     right: 338px;
-    width: 178px;
+    width: 168px;
 }
 .text2{
     top: -109px;
     right: -4px;
-    width: 151px;
+    width: 161px;
 }
 .text3{
     top: -162px;
     right: -346px;
-    width: 141px;
+    width: 151px;
 }
 .page4{
     height: 100vh;
