--- a/mobile.css
+++ b/mobile.css
@@ -8,6 +8,7 @@
     }
 
 
+
     nav {
         width: 98vw;
         height: 120px;
@@ -19,7 +20,7 @@
         position: fixed;
         background-color: #181614;
         /* background: gray; */
-        
+
 
 
     }
@@ -42,7 +43,7 @@
         position: relative;
         left: 40%;
         padding-top: 0px;
-        display:unset;
+        display: unset;
     }
 
     .menubtn img {
@@ -86,10 +87,12 @@
         font-size: 35px;
         padding-left: 30px;
         width: 20vh;
-        font-family: 'Segoe Script', sans-serif;
         color: white;
         display: flex;
-        font-weight: 50;
+        /* font-family: 'Noto Sans', sans-serif; */
+        font-family: 'Sarabun', sans-serif;
+        font-weight: 10;
+
 
 
     }
@@ -198,7 +201,7 @@
         align-items: center;
         /* position: absolute; */
         display: none;
-        
+
     }
 
     .scrollText h3 {
@@ -259,7 +262,8 @@
         animation: shadowanim 2.5s infinite ease-in-out;
 
     }
-    .shadow img{
+
+    .shadow img {
         width: 350px;
         position: absolute;
         left: 6vw;
@@ -316,10 +320,11 @@
         gap: 100px;
         margin-top: 150px;
     }
-    .carousel-container{
+
+    .carousel-container {
         display: unset;
     }
-    
+
 
     .page2 .project-title {
         width: 200px;
@@ -336,24 +341,26 @@
     .page2 .project-title img {
         width: 40px;
     }
-    .page2 .project-title h1{
+
+    .page2 .project-title h1 {
         font-size: 25px;
     }
+
     .swiper {
         width: 70vw;
         height: 80vh;
         background: #181614;
         margin-top: 50px;
-    
+
     }
-    
+
     .swiper-slide {
         text-align: center;
         color: white;
-        
-        
+
+
     }
-    
+
     .cards {
         cursor: grab;
         width: 275px;
@@ -368,7 +375,7 @@
         position: relative;
         left: 0%;
     }
-    
+
     .webimg {
         width: 230px;
         height: 210px;
@@ -378,7 +385,7 @@
         border: 1px solid white;
         border-radius: 40px;
     }
-    
+
     .pText {
         color: #FFF;
         text-align: center;
@@ -392,7 +399,7 @@
         padding-top: 20px;
         padding-bottom: 18px;
     }
-    
+
     .pbtn {
         width: 210px;
         height: 50px;
@@ -403,11 +410,12 @@
         padding-left: 20px;
         margin-top: 10px;
     }
-    
+
     .div1 {
         font-size: 20px;
         color: white;
     }
+
     .div2 {
         background-color: white;
         width: 130px;
@@ -421,9 +429,11 @@
         left: 8px;
         border: 1px solid white;
     }
+
     .div2:hover {
         transform: scale(1.1);
     }
+
     .div2>a {
         width: 35px;
         display: flex;
@@ -432,13 +442,16 @@
         text-decoration: none;
         color: #181614;
     }
-    .card2 .webimg{
+
+    .card2 .webimg {
         background: url(images/uiux-image.png);
     }
-    .card3 .webimg{
+
+    .card3 .webimg {
         background-image: url(images/app-img.png);
     }
-    #c3T{
+
+    #c3T {
         color: #FFF;
         text-align: center;
         font-family: Montserrat;
@@ -452,8 +465,8 @@
         padding-bottom: 18px;
 
     }
-    
-    
+
+
     .swiper-pagination {
         display: flex !important;
         bottom: -70px !important;
@@ -461,18 +474,18 @@
         gap: 15px !important;
         margin-bottom: 23vh !important;
     }
-    
+
     .swiper-pagination-bullet {
         background: rgb(255, 255, 255) !important;
-    
+
     }
-    
-    
-    
+
+
+
     .swiper-pagination-bullet-active {
         background-color: white !important;
     }
-    
+
     .swiper-pagination-bullet {
         box-shadow: 0px 0px 10px white !important;
     }
@@ -490,6 +503,7 @@
         gap: 0px;
 
     }
+
     .page3 .services-title {
         width: 230px;
         height: 60px;
@@ -502,16 +516,17 @@
         position: relative;
         left: -10%;
     }
-    
-    .page3 .services-title img{
+
+    .page3 .services-title img {
         width: 40px;
     }
-    .page3 .services-title h1{
+
+    .page3 .services-title h1 {
         font-size: 25px;
 
     }
-    
-    .page3 .slines{
+
+    .page3 .slines {
         display: flex;
         flex-direction: row;
         gap: 100px;
@@ -519,48 +534,55 @@
         bottom: 345px;
         display: none;
     }
-    .page3 .serviceContainer{
+
+    .page3 .serviceContainer {
         width: 400px;
         height: 500px;
         /* background-color: red; */
         display: flex;
         margin: 0;
         padding: 0;
-        
+
     }
-   .page3 .serviceContainer .serv1{
+
+    .page3 .serviceContainer .serv1 {
         margin-left: 15%;
         width: 1.2px;
         /* background-color: white; */
         height: 600px;
         /* overflow: hidden; */
     }
-    .serviceContainer .serv2{
+
+    .serviceContainer .serv2 {
         display: flex;
         width: 300px;
         height: 600px;
         /* background-color: rebeccapurple; */
         flex-direction: column;
         /* gap: 50px; */
-        
+
     }
-    .serv2 .subserv{
+
+    .serv2 .subserv {
         width: 300;
         height: 500px;
         /* background-color: rgba(255, 255, 255, 0.178); */
     }
-    .ss1{
-        padding-top:50px ;
+
+    .ss1 {
+        padding-top: 50px;
         margin-bottom: 40px;
     }
-    .subserv h1{
+
+    .subserv h1 {
         font-size: 17px;
         color: white;
         font-weight: normal;
         position: relative;
         left: 21.5%;
     }
-    .subserv p{
+
+    .subserv p {
         color: white;
         font-size: 8px;
         width: 140px;
@@ -571,7 +593,8 @@
         text-align: center;
 
     }
-    .subserv .ssimg{
+
+    .subserv .ssimg {
         width: 100px;
         position: relative;
         left: 37%;
@@ -579,45 +602,52 @@
         margin-bottom: 5px;
 
     }
-    .ss2 h1{
+
+    .ss2 h1 {
         position: relative;
         left: 37%;
         bottom: 15.5%;
 
 
     }
-    .ss2 .ssimg2{
+
+    .ss2 .ssimg2 {
         width: 100px;
         position: relative;
         left: 43%;
         margin-bottom: 5px;
 
     }
-    .ss2 p{
+
+    .ss2 p {
         position: relative;
         left: 36%;
     }
-    .ss3{
+
+    .ss3 {
         margin-top: 30px;
     }
-    .ss3 h1{
+
+    .ss3 h1 {
         position: relative;
         left: 27%;
         bottom: 12%;
-        
+
     }
-    
-    .ss3 .ssimg3{
+
+    .ss3 .ssimg3 {
         width: 90px;
         position: relative;
         left: 42%;
     }
-    .ss3 p{
+
+    .ss3 p {
         position: relative;
         left: 33%;
         margin-top: 5px;
     }
-    .page3 .slines h3{
+
+    .page3 .slines h3 {
         color: white;
         position: absolute;
         font-weight: lighter;
@@ -625,20 +655,23 @@
         height: fit-content;
         display: none;
     }
-    .page3 .slines .wdheading{
+
+    .page3 .slines .wdheading {
         left: -180px;
         bottom: 5px;
     }
-    .page3 .slines .uiuxheading{
+
+    .page3 .slines .uiuxheading {
         left: 187px;
         bottom: 27px;
     }
-    .page3 .slines .adheading{
+
+    .page3 .slines .adheading {
         left: 530px;
         bottom: 4px;
     }
-    
-    .page3 .serviceSection{
+
+    .page3 .serviceSection {
         display: flex;
         gap: 200px;
         flex-direction: row;
@@ -646,9 +679,10 @@
         bottom: 660px;
         flex-direction: row;
         display: none;
-        
+
     }
-    .page3 .serviceTexts{
+
+    .page3 .serviceTexts {
         display: flex;
         flex-direction: column;
         color: white;
@@ -659,25 +693,31 @@
         align-items: center;
         display: none;
     }
-    .serviceTexts .text1,.text2,.text3{
+
+    .serviceTexts .text1,
+    .text2,
+    .text3 {
         font-size: 10px;
         /* width: 150px; */
         text-align: center;
         position: relative;
         display: none;
-        
+
     }
-    .text1{
+
+    .text1 {
         top: -45px;
         right: 338px;
         width: 178px;
     }
-    .text2{
+
+    .text2 {
         top: -109px;
         right: -4px;
         width: 151px;
     }
-    .text3{
+
+    .text3 {
         top: -162px;
         right: -346px;
         width: 141px;
