--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     transition: .2s;
     -webkit-tap-highlight-color: transparent;
 }
+
 ::-webkit-scrollbar{
     width: 1vw;
 }
@@ -20,11 +21,13 @@
     background-clip: content-box;
 }
 
+
 html,
 body {
     width: 100%;
     height: 100%;
     background-color: #181614;
+    scroll-behavior: smooth;
 
 }
 
@@ -877,25 +880,27 @@ footer{
 .follow-links img:hover{
     opacity: .6;
 }
-#fb{
+.fb{
     width: 50px;
 }
 
 .left-footer .links{
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 15px;
     margin-left: 60px;
 
 }
 .left-footer .links img{
-    width: 15px;
+    width: 20px;
     margin-right: 10px;
 }
 .left-footer .links a{
     text-decoration: none;
     color: white;
     font-size: 10px;
+    display: flex;
+    align-items: center;
 }
 .left-footer .links a:hover{
     opacity: .6;
