--- a/style.css
+++ b/style.css
@@ -143,7 +143,10 @@ nav .links-side {
     align-items: center;
     padding-right: 50px;
     margin-top: 20px;
-
+    
+}
+nav .Mobile-links-side{
+    display: none;
 }
 nav .sidebar{
     position: fixed;
