--- a/style.css
+++ b/style.css
@@ -909,6 +909,8 @@ footer{
     opacity: .6;
 }
 .copyright{
-    margin: 15px;
-    transform: translateY(20px);
+    color: white;
+    margin-top: 10px;
+    font-size: 10px;
+
 }
